Fix pagination and load more btn
