# src/blog-backend/openapi.yaml
@@ -28,6 +28,8 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                  - posts
                 properties:
                   nextPageToken:
                     type: string
@@ -70,6 +72,8 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                  - posts
                 properties:
                   nextPageToken:
                     type: string
